--- a/composer.json
+++ b/composer.json
@@ -6,12 +6,15 @@
     ],
     "type": "flarum-extension",
     "license": "MIT",
+    "support": {
+        "issues": "https://github.com/blomstra/flarum-ext-secondary-tags-toggler/issues",
+        "source": "https://github.com/blomstra/flarum-ext-secondary-tags-toggler",
+        "forum": "https://blomstra.community/t/secondary-tag-toggler"
+    },
+    "homepage": "https://blomstra.net",
     "require": {
         "flarum/core": "^1.0.0",
         "flarum/tags": "^1.0.0"
-    },
-    "require-dev": {
-        "flarum/testing": "^1.0.0"
     },
     "authors": [
         {
@@ -30,9 +33,9 @@
             "title": "Secondary Tags Toggler",
             "category": "feature",
             "icon": {
-                "name": "",
-                "backgroundColor": "",
-                "color": ""
+                "name": "fas fa-tags",
+                "backgroundColor": "#EBF1FD",
+                "color": "#3a98d0"
             },
             "optional-dependencies": [
               "flarum/tags"
